Kubernetes-Manifests-file/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: myapp-staging.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: todolist-backend
                port:
                  number: 3500
          - path: /mongo-express(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8082
          - path: /(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: todolist-frontend
                port:
                  number: 3000
